# FF

./: .gitignore  pyproject.toml  requirements.txt
src/fuseformer_poetry/: config.json
src/fuseformer_poetry/callbacks/: eval_metrics.py
src/fuseformer_poetry/data/: data_module.py  preprocess_data.py
src/fuseformer_poetry/model/: adversarial_loss.py  discriminator.py  fuseformer.py  generator.py
src/notebooks/: prediction.ipynb  test_datamodule.ipynb  test_model.ipynb
tests/: A100_with_bboxes.ipynb  initial_test.py  predict.py  predict2.py  predict3.py  predict_with_bbox.py  predict_with_multiple_points.py
